--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
     "engines":{
   "node":"12.10.0",
-  "npm":"6.13.4",
+  "npm":"6.13.4"
 },
   "dependencies": {
     "@material-ui/core": "^4.9.10",
