--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-scroll-parallax": "^2.3.2"
+    "react-scroll-parallax": "^2.3.2",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
